errors.txt
hm_alias_search.c: In function ‘thealiassearch’:
hm_alias_search.c:41:2: error: expected declaration or statement at end of input
   41 |  return (0);
      |  ^~~~~~
